@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2014-2017 Laboratoire de Recherche et Développement de
+# Copyright (C) 2014-2018 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -230,6 +230,9 @@ digraph G {
   1 [label="s2"]
   2 [label="s3", style="bold", color="#505050"]
 }
+0 -> deleted
+1 -> deleted
+2 -> 0
 digraph G {
   rankdir=LR
   node [shape="circle"]
